# genxpath

./: .gitignore  README.md  pyproject.toml
.github/workflows/: qa.yaml
genxpath/: __main__.py  _browser.py  _cache.py  _gen.py  _io.py  gui.py  web.py
genxpath/gui/: __main__.py
tests/: test_gen.py
