[project]
name = "genxpath"
version = "0.1.0"
description = "XPath generator"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cache3>=0.4.3",
    "parsel>=1.10.0",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.11.7",
    "rich>=14.1.0",
    "rnet>=3.0.0rc5",
    "textual>=6.1.0",
    "textual-serve>=1.1.2",
    "typer>=0.17.4",
]

[dependency-groups]
dev = [
    "pyright>=1.1.405",
    "pytest>=8.4.2",
    "ruff>=0.13.1",
    "taskipy>=1.14.1",
    "ty>=0.0.1a20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.taskipy.tasks]
test = "pytest tests"
check_types = "pyright genxpath tests"
lint = "ruff check genxpath tests"
